# funasr_android

./: .gitmodules  CMakeLists.txt  README.md  build-android-arm64-v8a.sh  build-android-armv7-eabi.sh
.github/workflows/: build_so.yaml
android_lib/: CMakeLists.txt
